--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   text-align: center;
 }
 
-.App-logo {
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -35,4 +35,28 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
+  .toast {
+    position: absolute;
+    /* bottom: 20px; */
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #333;
+    color: #fff;
+    padding: 20px 20px;
+    border-radius: 5px;
+  }
+
+  .toast-message {
+    
+    font-size: 16px;
+  }
+
+  .onCloseButton{
+    position: absolute;
+    right: 0;
+    top: 0;
+    
+    background-color: #fff;
+
+  }
